--- a/MessageService/package.json
+++ b/MessageService/package.json
@@ -8,11 +8,13 @@
   },
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bull": "^3.4.8",
     "express": "^4.16.4",
     "express-json-validator-middleware": "^1.2.3",
     "mongodb": "^3.1.8",
